--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -61,15 +61,13 @@ li{
     background-image: url("../imagem/fundo-branco.jpg");
     background-size: cover;
     display: flex;
-    /* border: 2px solid black;
-    margin: 2px; */
     border-radius: 2px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card>img{
     height: 500px;
-    width: 500px;
-    /* margin-top: 50px; */
     margin-top: 40px;
     margin-right: 10px;
     margin-left: 10px;
@@ -77,32 +75,32 @@ li{
 
 .card>p{
     text-align: center;
+    width: auto;
     margin-top: 40px;
     padding-top: 50px;
     padding-bottom: 50px;
     height: 400px;
-    width: 500px;
     margin-right: 5px;
     color: white;
     background-color: #C0C0C0;
 }
 
-#imagem01{
-    margin-right: 10px;
+.imagemCard01{
+    width: 600px;
 }
 
-#imagem02{
-    width: ;
+.imagemCard02{
     height: 580px;
+    width: 600px;
     margin-top: 10px;
     margin-right: 20px;
     margin-left: 10px;
 }
 
+
 #paragrafo02{
-    width: 65%;
-    height: 480px;
-    margin-top: 10px;
+    height: 400px;
+    margin-top: 40px;
     margin-right: 5px;
 }
 
