--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -4,7 +4,7 @@
     margin-right: auto;
     text-align: center;
     padding-top: 50px;
-    background-image: url("../imagem/fundo-branco.jpg");
+    /* background-image: url("../imagem/fundo-branco.jpg"); */
     background-size: cover;
 }
 
@@ -61,7 +61,7 @@ li{
 .card{
     height: 600px;
     width: 100%;
-    background-image: url("../imagem/fundo-branco.jpg");
+    /* background-image: url("../imagem/fundo-branco.jpg"); */
     background-size: cover;
     display: flex;
     margin-left: auto;
@@ -114,9 +114,7 @@ body{
 }
 
 @media screen and (max-width: 768px){
-    body{
-        background-color: azure;
-    }
+
     .imagem{
         height: auto;
         width: 100%;
@@ -136,9 +134,6 @@ body{
         height: auto;
         width: auto;
         position: relative;
-        /* margin-top: 10px;
-        margin-right: 20px;
-        margin-left: 10px; */
     }
 
 }
