--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -5,7 +5,7 @@
     text-align: center;
     padding-top: 50px;
     /* background-image: url("../imagem/fundo-branco.jpg"); */
-    background-size: cover;
+    /* background-size: cover; */
 }
 
 .imagem>figure{
@@ -62,7 +62,7 @@ li{
     height: 600px;
     width: 100%;
     /* background-image: url("../imagem/fundo-branco.jpg"); */
-    background-size: cover;
+    /* background-size: cover; */
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -127,6 +127,7 @@ body{
 
     .imagemCard01{
         width: auto;
+        height: auto;
         position: relative;
     }
 
