alterando layout para celular

--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -45,7 +45,6 @@ a{
     text-decoration: none;
     font-family:'Times New Roman', Times, serif;
     color: black; 
-    
 }
 
 li{
@@ -115,6 +114,10 @@ body{
 
 @media screen and (max-width: 768px){
 
+    body{
+        background-color: white;
+    }
+
     .imagem{
         height: auto;
         width: 100%;
@@ -132,8 +135,8 @@ body{
     }
 
     .p{
-        margin-left: 10px;
-        margin-right: 10px;
+        height: auto;
+        margin: auto;
     }
 
     .imagemCard02{
