alterando layout do paragráfo para celular

--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -135,8 +135,8 @@ body{
     }
 
     .p{
-        height: auto;
-        margin: auto;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 
     .imagemCard02{
