--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -132,21 +132,26 @@ body{
         width: 200px;
         height: 200px;
         position: relative;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .p{
-
         width: 400px;
         height: 400px;
         position: relative;
         margin-left: 20px;
         margin-right: 20px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .imagemCard02{
         width: 200px;
         height: 200px;
         position: relative;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 }
