--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -5,9 +5,9 @@
     text-align: center;
     /* padding-top: 50px; */
      /* background-image: url("../imagem/Logotipo.png"); */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: white;
+    /* background-size: cover;
+    background-repeat: no-repeat; */
+    /* background-color: #E0FFFF; */
 }
 
 .imagem>figure{
@@ -116,13 +116,13 @@ li{
 body{
     margin: 0;
     padding: 0;
-    /* background-color: red; */
+    background-color: whitesmoke;
 }
 
 @media screen and (max-width: 768px){
 
     .imagem{
-        height: auto;
+        height: auto;       
         width: 100%;
     }
 
