--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -1,21 +1,15 @@
-.imagem{    
+.header{    
     height: 660px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    /* padding-top: 50px; */
-     /* background-image: url("../imagem/Logotipo.png"); */
-    /* background-size: cover;
-    background-repeat: no-repeat; */
-    /* background-color: #E0FFFF; */
 }
 
-.imagem>figure{
+.header>figure{
     margin: 0;
     padding: 0;
     width: auto;
     position: relative;
-    /* background-color: blue; */
 }
 
 img{
@@ -36,7 +30,6 @@ figcaption{
 
 
 h1{
-    margin-top: ;
     font-size: 50px;
     margin-bottom: 0;
 }
@@ -64,11 +57,28 @@ li{
     margin-bottom: 10px;   
 }
 
+
+.top-Bar{
+    /* background-color: blue; */
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    width: 98.4%;
+    border: 2px solid;
+    font-size: 20px;
+    height: 40px;
+    margin: 0 auto;
+    margin-top: 10px;
+    font-weight: bold;
+    text-align: center;
+    padding: 0;
+}
+
+.top-Bar>h2{
+    margin: 0;
+}
 .card{
     height: 600px;
     width: 100%;
-    /* background-image: url("../imagem/fundo-branco.jpg"); */
-    /* background-size: cover; */
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -77,7 +87,6 @@ li{
 
 .card>img{
     height: 500px;
-    margin-top: 40px;
     margin-right: 10px;
     margin-left: 10px;
 }
@@ -85,7 +94,7 @@ li{
 .card>p{
     text-align: center;
     width: auto;
-    margin-top: 40px;
+    margin-top: 0; 
     padding-top: 50px;
     padding-bottom: 50px;
     height: 400px;
@@ -94,9 +103,6 @@ li{
     background-color: #C0C0C0;
 }
 
-.imagemCard01{
-    width: 600px;
-}
 
 .imagemCard02{
     height: 580px;
@@ -109,7 +115,7 @@ li{
 
 #paragrafo02{
     height: 400px;
-    margin-top: 40px;
+    margin-top: 10px;
     margin-right: 5px;
 }
 
