--- a/css/styleFolder02.css
+++ b/css/styleFolder02.css
@@ -62,7 +62,7 @@ li{
     /* background-color: blue; */
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
-    width: auto;
+    width: 98.5%;
     border: 2px solid;
     font-size: 20px;
     height: 40px;
@@ -76,6 +76,7 @@ li{
 .top-Bar>h2{
     margin: 0;
 }
+
 .card{
     height: 600px;
     width: 100%;
@@ -104,19 +105,18 @@ li{
 }
 
 
-.imagemCard02{
-    height: 580px;
+.card>.imagemCard02{
     width: 600px;
-    margin-top: 10px;
-    margin-right: 20px;
+    /* margin-top: 10px; */
+    margin-right: 0px;
     margin-left: 10px;
 }
 
 
 #paragrafo02{
     height: 400px;
-    margin-top: 10px;
-    margin-right: 5px;
+    /* margin-top: 10px; */
+    margin-right: 10px;
 }
 
 body{
@@ -146,7 +146,7 @@ body{
     }
 
     .top-Bar{
-        width: 95%;
+        width: 90%;
     }
 
     .card>img{
